Refs #143927 - Fix search box on small screen.

--- a/src/less/public.less
+++ b/src/less/public.less
@@ -525,8 +525,7 @@ div#page-document
   padding: 0.7em 1em 0.7em 0.7em !important;
   border-right: none !important;
   background-color: @wm-light-gray5 !important;
-  // font-family: 'RobotoM' !important;
-      font-family: @wm-ff1 !important;
+  font-family: @wm-ff1 !important;
   font-weight: normal !important;
 }
 
@@ -572,6 +571,10 @@ div#page-document
 
   .chart-wrapper {
     height: 750px;
+  }
+
+  div.sui-search-box {
+    max-width: 90% !important;
   }
 }
 
